@@ -1,12 +1,11 @@
 /*
- * Copyright (c) 2010-2015 BSI Business Systems Integration AG.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * Copyright (c) 2010, 2023 BSI Business Systems Integration AG
  *
- * Contributors:
- *     BSI Business Systems Integration AG - initial API and implementation
+ * This program and the accompanying materials are made
+ * available under the terms of the Eclipse Public License 2.0
+ * which is available at https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  */
 package org.eclipse.scout.rt.shared.services.lookup;
 
@@ -92,7 +91,7 @@ public class LookupRowTest {
         "testIcon"
     };
     ILookupRow<Long> row = new LookupRow<>(cells, Long.class);
-    assertEquals(new Long(0L), row.getKey());
+    assertEquals(Long.valueOf(0L), row.getKey());
     assertEquals("text", row.getText());
     assertEquals("testIcon", row.getIconId());
   }
@@ -105,7 +104,7 @@ public class LookupRowTest {
         null
     };
     ILookupRow<Long> row = new LookupRow<>(cells, Long.class);
-    assertEquals(new Long(0L), row.getKey());
+    assertEquals(Long.valueOf(0L), row.getKey());
     assertNull(row.getText());
     assertNull(row.getIconId());
   }
